--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>This Is Jeopardy</h1>
     <div id="jeopardy-board"></div>
 
     <div id="answer-section">
