--- a/index.html
+++ b/index.html
@@ -10,32 +10,35 @@
     <h1>This Is Jeopardy</h1>
     <div id="jeopardy-board"></div>
 
-    <div id="answer-section">
-        <input type="text" id="answer-input" placeholder="Enter your answer">
-        <button id="submit-answer">Submit Answer</button>
-    </div>
-
+    <!-- Move players container above the answer section -->
     <div id="players-container">
         <div id="players">
-            <div class="player">
-                <label for="player1-name">Player 1</label>
-                <input type="text" id="player1-name" placeholder="Enter name">
-                <div id="player1-score">0</div>
+            <div class="player" data-player-index="0">
+                <label for="player-name-0">Player 1</label>
+                <input type="text" id="player-name-0" placeholder="Enter name">
+                <div class="score">0</div>
             </div>
-            <div class="player">
-                <label for="player2-name">Player 2</label>
-                <input type="text" id="player2-name" placeholder="Enter name">
-                <div id="player2-score">0</div>
+            <div class="player" data-player-index="1">
+                <label for="player-name-1">Player 2</label>
+                <input type="text" id="player-name-1" placeholder="Enter name">
+                <div class="score">0</div>
             </div>
-            <div class="player">
-                <label for="player3-name">Player 3</label>
-                <input type="text" id="player3-name" placeholder="Enter name">
-                <div id="player3-score">0</div>
+            <div class="player" data-player-index="2">
+                <label for="player-name-2">Player 3</label>
+                <input type="text" id="player-name-2" placeholder="Enter name">
+                <div class="score">0</div>
             </div>
         </div>
         <button id="reset-button">Reset Game</button>
     </div>
 
+    <div id="answer-section">
+        <input type="text" id="answer-input" placeholder="Enter your answer">
+        <button id="submit-answer">Submit Answer</button>
+    </div>
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
