--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>This Is Jeopardy</h1>
+
+    <!-- Jeopardy Board -->
     <div id="jeopardy-board"></div>
 
-    <!-- Move players container above the answer section -->
+    <!-- Players Container above the Answer Section -->
     <div id="players-container">
         <div id="players">
             <div class="player" data-player-index="0">
@@ -32,13 +34,14 @@
         <button id="reset-button">Reset Game</button>
     </div>
 
+    <!-- Answer Section -->
     <div id="answer-section">
         <input type="text" id="answer-input" placeholder="Enter your answer">
         <button id="submit-answer">Submit Answer</button>
     </div>
 
+    <!-- Scripts -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
-
 </body>
 </html>
